src/test/data/c/fail/redeclaration.c.err
data/c/fail/redeclaration.c:2:1-8: error: conflicting types for 'g': got 'char', previously declared as 'int'
 2 | char g;
   | ^~~~~~~
